code/fw1_iptables.rules
# Generated by iptables-save v1.4.14 on Sat Jun  7 13:56:27 2014
*filter
:INPUT DROP [3:96]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -s 192.168.40.0/24 -m state --state NEW -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m state --state NEW -j ACCEPT
-A FORWARD -i eth0 -s 192.168.40.0/24 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -d 192.168.40.0/24 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -d 192.168.40.1/32 -p tcp -m tcp --dport 80 -m state --state NEW -j ACCEPT
-A FORWARD -d 192.168.40.1/32 -p tcp -m tcp --dport 443 -m state --state NEW -j ACCEPT
-A FORWARD -d 192.168.40.1/32 -p tcp -m tcp --dport 25 -m state --state NEW -j ACCEPT
-A FORWARD -d 192.168.40.1/32 -p tcp -m tcp --dport 587 -m state --state NEW -j ACCEPT
-A FORWARD -d 192.168.40.1/32 -p tcp -m tcp --dport 465 -m state --state NEW -j ACCEPT
-A FORWARD -d 192.168.40.1/32 -p tcp -m tcp --dport 993 -m state --state NEW -j ACCEPT
-A FORWARD -d 192.168.40.1/32 -p tcp -m tcp --dport 995 -m state --state NEW -j ACCEPT
-A FORWARD -d 192.168.40.1/32 -p tcp -m tcp --dport 143 -m state --state NEW -j ACCEPT
-A FORWARD -d 192.168.40.1/32 -p tcp -m tcp --dport 110 -m state --state NEW -j ACCEPT
-A FORWARD -d 192.168.40.1/32 -p tcp -m tcp --dport 53 -m state --state NEW -j ACCEPT
-A FORWARD -d 192.168.40.1/32 -p udp -m udp --dport 53 -m state --state NEW -j ACCEPT
-A FORWARD -d 192.168.40.240/32 -p udp -m udp --dport 1194 -m state --state NEW -j ACCEPT
-A FORWARD -d 192.168.40.240/32 -p udp -m udp --dport 1195 -m state --state NEW -j ACCEPT
-A OUTPUT -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
COMMIT
# Completed on Sat Jun  7 13:56:27 2014
# Generated by iptables-save v1.4.14 on Sat Jun  7 13:56:27 2014
*nat
:PREROUTING ACCEPT [8:704]
:INPUT ACCEPT [1:229]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [3:162]
-A PREROUTING -i eth1 -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168.40.1:80
-A PREROUTING -i eth1 -p tcp -m tcp --dport 443 -j DNAT --to-destination 192.168.40.1:443
-A PREROUTING -i eth1 -p tcp -m tcp --dport 25 -j DNAT --to-destination 192.168.40.1:25
-A PREROUTING -i eth1 -p tcp -m tcp --dport 587 -j DNAT --to-destination 192.168.40.1:587
-A PREROUTING -i eth1 -p tcp -m tcp --dport 465 -j DNAT --to-destination 192.168.40.1:465
-A PREROUTING -i eth1 -p tcp -m tcp --dport 993 -j DNAT --to-destination 192.168.40.1:993
-A PREROUTING -i eth1 -p tcp -m tcp --dport 995 -j DNAT --to-destination 192.168.40.1:995
-A PREROUTING -i eth1 -p tcp -m tcp --dport 143 -j DNAT --to-destination 192.168.40.1:143
-A PREROUTING -i eth1 -p tcp -m tcp --dport 110 -j DNAT --to-destination 192.168.40.1:110
-A PREROUTING -i eth1 -p udp -m udp --dport 1195 -j DNAT --to-destination 192.168.40.240:1195
-A PREROUTING -i eth1 -p tcp -m tcp --dport 53 -j DNAT --to-destination 192.168.40.1:53
-A PREROUTING -i eth1 -p udp -m udp --dport 53 -j DNAT --to-destination 192.168.40.1:53
-A PREROUTING -i eth1 -p udp -m udp --dport 1194 -j DNAT --to-destination 192.168.40.240:1194
-A PREROUTING -i eth1 -p udp -m udp --dport 1195 -j DNAT --to-destination 192.168.40.240:1194
-A POSTROUTING -o eth1 -j MASQUERADE
COMMIT
# Completed on Sat Jun  7 13:56:27 2014
