code/fw2_iptables.rules
# Generated by iptables-save v1.4.14 on Sat Jun  7 21:08:32 2014
*nat
:PREROUTING ACCEPT [31:2163]
:INPUT ACCEPT [1:42]
:OUTPUT ACCEPT [28:1740]
:POSTROUTING ACCEPT [2:107]
-A POSTROUTING -o eth1 -j MASQUERADE
COMMIT
# Completed on Sat Jun  7 21:08:32 2014
# Generated by iptables-save v1.4.14 on Sat Jun  7 21:08:32 2014
*filter
:INPUT DROP [1:32]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [3:387]
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m state --state NEW -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i eth1 -p udp -m udp --dport 1195 -m state --state NEW -j ACCEPT
-A INPUT -i eth1 -p udp -m udp --dport 1194 -m state --state NEW -j ACCEPT
-A FORWARD !-i eth1 -s 192.168.30.0/24 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -d 192.168.30.0/24 -m state --state RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Sat Jun  7 21:08:32 2014
